<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/backimage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="733dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="monospace"
                android:paddingTop="100dp"
                android:text="@string/thankyou"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="monospace"
                android:text="@string/ordernum"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:layout_weight="1"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/success" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="monospace"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/confirm"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/returnHome"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:onClick="buttonClick"
                android:text="@string/button3"
                android:textSize="15dp" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>